nieyraud_services/v5/srcs/kustomization/influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: ft_services
spec:
  ports:
  - port: 8086
    targetPort: 8086
  selector:
    app: ft_services
    tier: influxdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: ft_services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ft_services
      tier: influxdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ft_services
        tier: influxdb
    spec:
      containers:
      - image: influxdb:1.5.4-alpine
        name: influxdb
        ports:
        - containerPort: 8086
          name: influxdb
        volumeMounts:
          - name: influx-persistent-storage
            mountPath: /var/lib/influxdb
          - name: influxd-config
            mountPath: /etc/influxdb/
      volumes:
      - name: influx-persistent-storage
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
      - name: influxd-config
        configMap:
          name: influxd-config
